--- a/memories/static/css/customcss.css
+++ b/memories/static/css/customcss.css
@@ -1,5 +1,25 @@
 
 
+.container-jp1 {
+	margin-right:0;
+	margin-left:0;
+}
+
+.iframe-container{
+	position: relative;
+	width: 100%;
+	padding-bottom: 56.25%; 
+	height: 0;
+  }
+  .iframe-container iframe{
+	position: absolute;
+	top:0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+  }
+
+
 .swiper-slide {
 	position: relative;
 	display: flex;
@@ -22,7 +42,7 @@
 }
 .swiper-slider-2 .swiper-slide {
 	min-height: 300px;
-	padding: 90px 0 20px;
+	padding: 30px 0 20px;
 	background-position: right !important;
 }
 @media (min-width: 768px) {
