added modal and GA

--- a/memories/templates/memories_app/index_bu_2020.03.26.html
+++ b/memories/templates/memories_app/index_bu_2020.03.26.html
@@ -4,14 +4,6 @@
 
 <html class="wide wow-animation" lang="en">
   <head>
-    <!-- Google Tag Manager -->
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-P4GBDDZ');</script>
-    <!-- End Google Tag Manager -->
-
     <title>Momenta Video Memories</title>
     <meta name="format-detection" content="telephone=no">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
@@ -30,11 +22,6 @@
     <![endif]-->
   </head>
   <body>
-    <!-- Google Tag Manager (noscript) -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-P4GBDDZ"
-    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-    <!-- End Google Tag Manager (noscript) -->
-
     <div class="preloader">
       <div class="preloader-body">
         <div class="cssload-container">
@@ -74,9 +61,8 @@
                       </li>
                       <li class="rd-nav-item"><a class="rd-nav-link" href="#contact">Contacts</a>
                       </li>
-                      <li class="rd-nav-item"><p class="rd-nav-link" data-toggle="modal" data-target="#exampleModalCenter">Free Download</p>
+                      <li class="rd-nav-item"><a class="rd-nav-link" href="https://apps.apple.com/us/app/wingwarp-momenta/id1450517652">Free Download</a>
                       </li>
-                      {% comment %} <li class="rd-nav-item"><a class="rd-nav-link" href="https://apps.apple.com/us/app/wingwarp-momenta/id1450517652">Free Download</a> {% endcomment %}
                     </ul>
                   </div>
                 </div>
@@ -85,7 +71,7 @@
           </nav>
         </div>
       </header>
-       <!-- Swiper-->
+      <!-- Swiper-->
       <section class="section swiper-container swiper-slider swiper-slider-2" id="home" data-loop="false" data-autoplay="50000" data-simulate-touch="false" data-slide-effect="fade">
         <div class="swiper-wrapper text-lg-left text-center">
           <div class="swiper-slide" data-slide-bg="{% static 'images/slider-1-1920x900.jpg' %}">
@@ -93,7 +79,7 @@
               <div class="container">
                 <div class="row justify-content-lg-center">
                   <div class="col-12">
-                    <h1 data-caption-animate="fadeInUp" data-caption-delay="100"><span class="d-block font-weight-medium">Momenta Video Memories</span><span class="d-block font-weight-thin">Don't miss any more memories</span></h1><button class="button button-md button-primary self-center-md" data-toggle="modal" data-target="#exampleModalCenter" data-caption-animate="fadeInUp" data-caption-delay="450">Download Free</button>
+                    <h1 data-caption-animate="fadeInUp" data-caption-delay="100"><span class="d-block font-weight-medium">Momenta Video Memories</span><span class="d-block font-weight-thin">Don't miss any more memories</span></h1><a class="button button-240 button-primary self-center-md" href="https://apps.apple.com/us/app/wingwarp-momenta/id1450517652" data-caption-animate="fadeInUp" data-caption-delay="450">Download Free</a>
                   </div>
                 </div>
               </div>
@@ -113,9 +99,6 @@
           </div>
         </div>
       </section>
-
-
-
       <!-- Special Education-->
       <section class="section context-dark" id="about">
         <div class="row row-flex no-gutters">
@@ -183,11 +166,10 @@
       <section class="section section-xs accent-violet-bg">
         <div class="container">
           <div class="box-cta">
-            <div class="box-cta-inner"><h3 class="text-white">Download Momenta FREE!</h3></div>
             <div class="box-cta-inner">
-                <button class="button button-lg button-primary" data-toggle="modal" data-target="#exampleModalCenter">Download Free</button>
+              <h3 class="text-white">Download Momenta FREE!</h3>
             </div>
-            {% comment %} <div class="box-cta-inner"><a class="button button-lg button-primary" href="https://apps.apple.com/us/app/wingwarp-momenta/id1450517652">Download Free</a></div> {% endcomment %}
+            <div class="box-cta-inner"><a class="button button-lg button-primary" href="https://apps.apple.com/us/app/wingwarp-momenta/id1450517652">Download Free</a></div>
           </div>
         </div>
       </section>
@@ -224,52 +206,9 @@
               </div>
             </div>
           </div>
-          {% comment %} <div class="area51"> {% endcomment %}
-          <div class="button-wrap-lg">
-              <button class="button button-md button-primary button-long" data-toggle="modal" data-target="#exampleModalCenter">Download Free Now</button>
-          </div>
-          {% comment %} </div> {% endcomment %}
-            {% comment %} <div class="container"><p id="custom-button" onclick="modalActivate()">Download Free Now</a></div> {% endcomment %}
-            {% comment %} <div class="button-wrap-lg"><a class="button button-md button-primary button-long custom-button" onclick="modalActivate()" href="">Download Free Now</a></div> {% endcomment %}
-          {% comment %} <div class="button-wrap-lg button-custom"><a class="button button-md button-primary button-long" href="https://apps.apple.com/us/app/wingwarp-momenta/id1450517652">Download Free Now</a></div> {% endcomment %}
+          <div class="button-wrap-lg"><a class="button button-md button-primary button-long" href="https://apps.apple.com/us/app/wingwarp-momenta/id1450517652">Download Free Now</a></div>
         </div>
       </section>
-      
-      
-         <!-- Bootstrap Modal -->
-      <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLongTitle"><img src="{% static 'images/WingWarpIcon-1024.png' %}" alt="" width="32" height="32"/>   Momenta Memories is in BETA!</h5>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-            <div class="modal-body">
-              <p>You are invited into our private Beta. We'd love for you to enjoy the app and give us any feedback you have, to help us create a better app. <br>
-              Here's the thing. The Apple App Store isn't a good place for a Beta version, so Apple provides us with an app called 
-              Testflight, which is used to test apps. So if you'll enter your email below, we will send you a link to the Testflight app and you can get started.</p>
-            </div>
-            <div class="modal-footer">
-              {% comment %} <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> {% endcomment %}
-              {% comment %} <button type="button" class="btn btn-primary">Save changes</button> {% endcomment %}
-
-              <form>
-                <div class="form-group form-group-jp">
-                  <label for="exampleInputEmail1"><strong>Enter your email to get the app.</strong></label>
-                  <input type="email" class="form-control input-jp" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-                  {% comment %} <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> {% endcomment %}
-                </div>
-                <button type="submit" class="button-custom-jp button button-primary">Submit</button>
-              </form>
-
-
-            </div>
-          </div>
-        </div>
-      </div>
-
       <!-- Page Footer-->
       <footer class="section footer-2" id="contact">
         <div class="container">
@@ -303,15 +242,12 @@
           <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span><span>&nbsp;</span><span>WingWarp</span><span>.&nbsp;</span><span>All Rights Reserved</span>. <a href="http://college.wingwarp.tv/terms_of_use.html">Terms of Use</a>  <a href="http://college.wingwarp.tv/privacy_policy.html">Privace Policy</a></p>
         </div>
       </footer>
-
     </div>
     <!-- Global Mailform Output-->
     <div class="snackbars" id="form-output-global"></div>
     <!-- Javascript-->
     <script src="{% static 'js/core.min.js' %}"></script>
     <script src="{% static 'js/script.js' %}"></script>
-    <script src="{% static 'js/scriptjp.js' %}"></script>
     <!-- coded by Houdini-->
-
   </body>
 </html>
