--- a/memories/static/css/customcss.css
+++ b/memories/static/css/customcss.css
@@ -1,5 +1,68 @@
 
 
+
+.modal.show .modal-dialog {
+	transform: translate(0, 20%);
+}
+
+
+.modal-footer {
+	display: flex;
+	align-items: center;
+	justify-content: flex-start;
+	padding: 15px;
+	border-top: 1px solid #e9ecef;
+} 
+
+.button-custom-jp {
+	margin-top: 5px;
+}
+.form-group-jp {
+	margin-bottom: 0px;
+}
+.input-jp {
+	margin: 0 auto;
+}
+
+.bg-modal-jp {
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0,0,0,0.7);
+	position: absolute;
+	top: 0;
+	display: none;
+	justify-content: center;
+	align-items: flex-start;
+}
+.modal-content-jp {
+	width: 500px;
+	height: 300px;
+	background-color: white;
+	border-radius: 4px;
+	text-align: center;
+	padding: 15px;
+	position: relative;
+}
+input {
+	width: 50%;
+	display: block;
+	margin: 15px auto;
+}
+.close-jp {
+	position: absolute;
+	top:0;
+	right: 15px;
+	font-size: 42px;
+	transform: rotate(45deg);
+	cursor: pointer;
+}
+
+.swiper-replacement {
+	background: url("../images/slider-1-1920x900.jpg") no-repeat scroll right center;
+	/* background:linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)), url("../images/slider-1-1920x900.jpg") no-repeat scroll right center; */
+	background-size: cover;
+}
+
 .container-jp1 {
 	margin-right:0;
 	margin-left:0;
