--- a/memories/templates/memories_app/index_bu_2020.03.27.html
+++ b/memories/templates/memories_app/index_bu_2020.03.27.html
@@ -4,14 +4,6 @@
 
 <html class="wide wow-animation" lang="en">
   <head>
-    <!-- Google Tag Manager -->
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-P4GBDDZ');</script>
-    <!-- End Google Tag Manager -->
-
     <title>Momenta Video Memories</title>
     <meta name="format-detection" content="telephone=no">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
@@ -30,11 +22,6 @@
     <![endif]-->
   </head>
   <body>
-    <!-- Google Tag Manager (noscript) -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-P4GBDDZ"
-    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-    <!-- End Google Tag Manager (noscript) -->
-
     <div class="preloader">
       <div class="preloader-body">
         <div class="cssload-container">
@@ -74,7 +61,9 @@
                       </li>
                       <li class="rd-nav-item"><a class="rd-nav-link" href="#contact">Contacts</a>
                       </li>
-                      <li class="rd-nav-item"><p class="rd-nav-link" data-toggle="modal" data-target="#exampleModalCenter">Free Download</p>
+                      {% comment %} <div class="area54"> {% endcomment %}
+                      <li class="rd-nav-item"><p class="rd-nav-link area54">Free Download</p>
+                      {% comment %} </div> {% endcomment %}
                       </li>
                       {% comment %} <li class="rd-nav-item"><a class="rd-nav-link" href="https://apps.apple.com/us/app/wingwarp-momenta/id1450517652">Free Download</a> {% endcomment %}
                     </ul>
@@ -85,7 +74,7 @@
           </nav>
         </div>
       </header>
-       <!-- Swiper-->
+      <!-- Swiper-->
       <section class="section swiper-container swiper-slider swiper-slider-2" id="home" data-loop="false" data-autoplay="50000" data-simulate-touch="false" data-slide-effect="fade">
         <div class="swiper-wrapper text-lg-left text-center">
           <div class="swiper-slide" data-slide-bg="{% static 'images/slider-1-1920x900.jpg' %}">
@@ -93,7 +82,11 @@
               <div class="container">
                 <div class="row justify-content-lg-center">
                   <div class="col-12">
-                    <h1 data-caption-animate="fadeInUp" data-caption-delay="100"><span class="d-block font-weight-medium">Momenta Video Memories</span><span class="d-block font-weight-thin">Don't miss any more memories</span></h1><button class="button button-md button-primary self-center-md" data-toggle="modal" data-target="#exampleModalCenter" data-caption-animate="fadeInUp" data-caption-delay="450">Download Free</button>
+                      <h1 data-caption-animate="fadeInUp" data-caption-delay="100"><span class="d-block font-weight-medium">Momenta Video Memories</span><span class="d-block font-weight-thin">Don't miss any more memories</span></h1>
+                    {% comment %} <div class = "area51"> {% endcomment %}
+                      <button class="button button-240 button-primary self-center-md area51" data-caption-animate="fadeInUp" data-caption-delay="450">Download Free</button>
+                    {% comment %} </div>  {% endcomment %}
+                    {% comment %} <h1 data-caption-animate="fadeInUp" data-caption-delay="100"><span class="d-block font-weight-medium">Momenta Video Memories</span><span class="d-block font-weight-thin">Don't miss any more memories</span></h1><a class="button button-240 button-primary self-center-md" href="https://apps.apple.com/us/app/wingwarp-momenta/id1450517652" data-caption-animate="fadeInUp" data-caption-delay="450">Download Free</a>  {% endcomment %}
                   </div>
                 </div>
               </div>
@@ -113,9 +106,6 @@
           </div>
         </div>
       </section>
-
-
-
       <!-- Special Education-->
       <section class="section context-dark" id="about">
         <div class="row row-flex no-gutters">
@@ -185,7 +175,9 @@
           <div class="box-cta">
             <div class="box-cta-inner"><h3 class="text-white">Download Momenta FREE!</h3></div>
             <div class="box-cta-inner">
-                <button class="button button-lg button-primary" data-toggle="modal" data-target="#exampleModalCenter">Download Free</button>
+              <div class = "area52">
+                <button class="button button-lg button-primary">Download Free</button>
+              </div>
             </div>
             {% comment %} <div class="box-cta-inner"><a class="button button-lg button-primary" href="https://apps.apple.com/us/app/wingwarp-momenta/id1450517652">Download Free</a></div> {% endcomment %}
           </div>
@@ -226,52 +218,33 @@
           </div>
           {% comment %} <div class="area51"> {% endcomment %}
           <div class="button-wrap-lg">
-              <button class="button button-md button-primary button-long" data-toggle="modal" data-target="#exampleModalCenter">Download Free Now</button>
+            <div class = "area53">
+              <button class="button button-md button-primary button-long">Download Free Now</button>
+            </div>
           </div>
           {% comment %} </div> {% endcomment %}
             {% comment %} <div class="container"><p id="custom-button" onclick="modalActivate()">Download Free Now</a></div> {% endcomment %}
             {% comment %} <div class="button-wrap-lg"><a class="button button-md button-primary button-long custom-button" onclick="modalActivate()" href="">Download Free Now</a></div> {% endcomment %}
           {% comment %} <div class="button-wrap-lg button-custom"><a class="button button-md button-primary button-long" href="https://apps.apple.com/us/app/wingwarp-momenta/id1450517652">Download Free Now</a></div> {% endcomment %}
         </div>
-      </section>
-      
-      
-         <!-- Bootstrap Modal -->
-      <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLongTitle"><img src="{% static 'images/WingWarpIcon-1024.png' %}" alt="" width="32" height="32"/>   Momenta Memories is in BETA!</h5>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-            <div class="modal-body">
-              <p>You are invited into our private Beta. We'd love for you to enjoy the app and give us any feedback you have, to help us create a better app. <br>
-              Here's the thing. The Apple App Store isn't a good place for a Beta version, so Apple provides us with an app called 
-              Testflight, which is used to test apps. So if you'll enter your email below, we will send you a link to the Testflight app and you can get started.</p>
-            </div>
-            <div class="modal-footer">
-              {% comment %} <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> {% endcomment %}
-              {% comment %} <button type="button" class="btn btn-primary">Save changes</button> {% endcomment %}
-
-              <form>
-                <div class="form-group form-group-jp">
-                  <label for="exampleInputEmail1"><strong>Enter your email to get the app.</strong></label>
-                  <input type="email" class="form-control input-jp" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-                  {% comment %} <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> {% endcomment %}
-                </div>
-                <button type="submit" class="button-custom-jp button button-primary">Submit</button>
-              </form>
-
-
-            </div>
-          </div>
+      <!--Modal Section-->
+      <div class="bg-modal-jp">
+        <div class="modal-content-jp">
+          <div class="close-jp">+</div>
+          <img src="{% static 'images/WingWarpIcon-1024.png' %}" alt="" width="48 height="48>
+          <form action="">
+            <input type="text" placeholder="Name">
+            <input type="text" placeholder="Email">
+            <a href="" class="button button-md">Click Here</a>
+          </form>
         </div>
       </div>
-
+      </section>
       <!-- Page Footer-->
       <footer class="section footer-2" id="contact">
+        <div class="area51">
+          <p>hello there<p>
+        </div>
         <div class="container">
           <div class="row row-40">
             <div class="col-md-6 col-lg-3"><a class="footer-logo"><img src="{% static 'images/WingWarpIcon-1024.png' %}" alt="" width="48" height="48"/></a>
@@ -312,6 +285,5 @@
     <script src="{% static 'js/script.js' %}"></script>
     <script src="{% static 'js/scriptjp.js' %}"></script>
     <!-- coded by Houdini-->
-
   </body>
 </html>
