--- a/memories/templates/memories_app/index.html
+++ b/memories/templates/memories_app/index.html
@@ -74,7 +74,7 @@
                       </li>
                       <li class="rd-nav-item"><a class="rd-nav-link" href="#contact">Contacts</a>
                       </li>
-                      <li class="rd-nav-item"><p class="rd-nav-link" data-toggle="modal" data-target="#exampleModalCenter">Free Download</p>
+                      <li class="rd-nav-item"><p class="rd-nav-link download-link-1" data-toggle="modal" data-target="#exampleModalCenter">Free Download</p>
                       </li>
                       {% comment %} <li class="rd-nav-item"><a class="rd-nav-link" href="https://apps.apple.com/us/app/wingwarp-momenta/id1450517652">Free Download</a> {% endcomment %}
                     </ul>
@@ -93,7 +93,7 @@
               <div class="container">
                 <div class="row justify-content-lg-center">
                   <div class="col-12">
-                    <h1 data-caption-animate="fadeInUp" data-caption-delay="100"><span class="d-block font-weight-medium">Momenta Video Memories</span><span class="d-block font-weight-thin">Don't miss any more memories</span></h1><button class="button button-md button-primary self-center-md" data-toggle="modal" data-target="#exampleModalCenter" data-caption-animate="fadeInUp" data-caption-delay="450">Download Free</button>
+                    <h1 data-caption-animate="fadeInUp" data-caption-delay="100"><span class="d-block font-weight-medium">Momenta Video Memories</span><span class="d-block font-weight-thin">Don't miss any more memories</span></h1><button class="button button-md button-primary self-center-md download-button-1" data-toggle="modal" data-target="#exampleModalCenter" data-caption-animate="fadeInUp" data-caption-delay="450">Download Free</button>
                   </div>
                 </div>
               </div>
@@ -185,7 +185,7 @@
           <div class="box-cta">
             <div class="box-cta-inner"><h3 class="text-white">Download Momenta FREE!</h3></div>
             <div class="box-cta-inner">
-                <button class="button button-lg button-primary" data-toggle="modal" data-target="#exampleModalCenter">Download Free</button>
+                <button class="button button-lg button-primary download-button-2" data-toggle="modal" data-target="#exampleModalCenter">Download Free</button>
             </div>
             {% comment %} <div class="box-cta-inner"><a class="button button-lg button-primary" href="https://apps.apple.com/us/app/wingwarp-momenta/id1450517652">Download Free</a></div> {% endcomment %}
           </div>
@@ -226,7 +226,7 @@
           </div>
           {% comment %} <div class="area51"> {% endcomment %}
           <div class="button-wrap-lg">
-              <button class="button button-md button-primary button-long" data-toggle="modal" data-target="#exampleModalCenter">Download Free Now</button>
+              <button class="button button-md button-primary button-long download-button-3" data-toggle="modal" data-target="#exampleModalCenter">Download Free Now</button>
           </div>
           {% comment %} </div> {% endcomment %}
             {% comment %} <div class="container"><p id="custom-button" onclick="modalActivate()">Download Free Now</a></div> {% endcomment %}
@@ -255,13 +255,19 @@
               {% comment %} <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> {% endcomment %}
               {% comment %} <button type="button" class="btn btn-primary">Save changes</button> {% endcomment %}
 
-              <form>
+              <form method="POST">
+                {% csrf_token %}
                 <div class="form-group form-group-jp">
                   <label for="exampleInputEmail1"><strong>Enter your email to get the app.</strong></label>
-                  <input type="email" class="form-control input-jp" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                  {% comment %} <input type="email" class="form-control input-jp" id="id_email" aria-describedby="emailHelp" placeholder="Enter email"> {% endcomment %}
+                  <div>
+                  {% comment %} <div class = 'container form-control input-jp'> {% endcomment %}
+                    {{ form.email }}
+                  </div>
+                  {% comment %} <input type="email" class="form-control input-jp" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email"> {% endcomment %}
                   {% comment %} <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> {% endcomment %}
                 </div>
-                <button type="submit" class="button-custom-jp button button-primary">Submit</button>
+                <button type="submit" class="button-custom-jp button button-primary modal-button-1">Submit</button>
               </form>
 
 
