--- a/memories/templates/memories_app/index_bu_2020.04.20.html
+++ b/memories/templates/memories_app/index_bu_2020.04.20.html
@@ -92,8 +92,7 @@
                       </li>
                       <li class="rd-nav-item"><a class="rd-nav-link" href="#contact">Contacts</a>
                       </li>
-                      {% comment %} <li class="rd-nav-item"><p class="rd-nav-link download-link-1" data-toggle="modal" data-target="#exampleModalCenter">Free Download</p> {% endcomment %}
-                      <li button class="button button-sm button-primary self-center-sm download-button-1 button-jp-5" data-toggle="modal" data-target="#exampleModalCenter" data-caption-animate="fadeInUp" data-caption-delay="450">Download Free</button>
+                      <li class="rd-nav-item"><p class="rd-nav-link download-link-1" data-toggle="modal" data-target="#exampleModalCenter">Free Download</p>
                       </li>
                       {% comment %} <li class="rd-nav-item"><a class="rd-nav-link" href="https://apps.apple.com/us/app/wingwarp-momenta/id1450517652">Free Download</a> {% endcomment %}
                     </ul>
