--- a/memories/templates/memories_app/index_BU_2020.06.08_Before changing app store links.html
+++ b/memories/templates/memories_app/index_BU_2020.06.08_Before changing app store links.html
@@ -93,12 +93,9 @@
                       <li class="rd-nav-item"><a class="rd-nav-link" href="#contact">Contacts</a>
                       </li>
                       {% comment %} <li class="rd-nav-item"><p class="rd-nav-link download-link-1" data-toggle="modal" data-target="#exampleModalCenter">Free Download</p> {% endcomment %}
-                      {% comment %} <li button class="button button-sm button-primary self-center-sm download-button-nav button-jp-5" data-toggle="modal" data-target="#exampleModalCenter" data-caption-animate="fadeInUp" data-caption-delay="450">Download Free</button> {% endcomment %}
-                      {% comment %} </li> {% endcomment %}
-                      {% comment %} <li class="rd-nav-item"><a class="rd-nav-link" href="https://apps.apple.com/us/app/wingwarp-momenta/id1450517652">Free Download</a> {% endcomment %}
-                      <li class="button self-center-sm download-button-nav button-jp-5"><a class="button button-primary button-long" href="https://apps.apple.com/us/app/wingwarp-momenta/id1450517652">Download Free</a>
+                      <li button class="button button-sm button-primary self-center-sm download-button-nav button-jp-5" data-toggle="modal" data-target="#exampleModalCenter" data-caption-animate="fadeInUp" data-caption-delay="450">Download Free</button>
                       </li>
-                    {% comment %} <li class="button-wrap-lg button-custom"><a class="button button-sm button-primary " href="https://apps.apple.com/us/app/wingwarp-momenta/id1450517652">Download Free</a></li> {% endcomment %}
+                      {% comment %} <li class="rd-nav-item"><a class="rd-nav-link" href="https://apps.apple.com/us/app/wingwarp-momenta/id1450517652">Free Download</a> {% endcomment %}
                     </ul>
                   </div>
                 </div>
@@ -115,9 +112,7 @@
               <div class="container">
                 <div class="row justify-content-lg-center">
                   <div class="col-12">
-                    {% comment %} <h1 data-caption-animate="fadeInUp" data-caption-delay="100"><span class="d-block font-weight-medium">Momenta Video Memories</span><span class="d-block font-weight-thin">Don't miss any more memories</span></h1><button class="button button-md button-primary self-center-md download-button-1" data-toggle="modal" data-target="#exampleModalCenter" data-caption-animate="fadeInUp" data-caption-delay="450">Download Free</button> {% endcomment %}
-                    <h1 data-caption-animate="fadeInUp" data-caption-delay="100"><span class="d-block font-weight-medium">Momenta Video Memories</span><span class="d-block font-weight-thin">Don't miss any more memories</span></h1>
-                    <div class="button-wrap-lg button-custom"><a class="button button-md button-primary button-long" href="https://apps.apple.com/us/app/wingwarp-momenta/id1450517652">Download Free</a></div>
+                    <h1 data-caption-animate="fadeInUp" data-caption-delay="100"><span class="d-block font-weight-medium">Momenta Video Memories</span><span class="d-block font-weight-thin">Don't miss any more memories</span></h1><button class="button button-md button-primary self-center-md download-button-1" data-toggle="modal" data-target="#exampleModalCenter" data-caption-animate="fadeInUp" data-caption-delay="450">Download Free</button>
                   </div>
                 </div>
               </div>
@@ -207,10 +202,10 @@
         <div class="container">
           <div class="box-cta">
             <div class="box-cta-inner"><h3 class="text-white">Download Momenta FREE!</h3></div>
-            {% comment %} <div class="box-cta-inner"> {% endcomment %}
-                {% comment %} <button class="button button-lg button-primary download-button-2" data-toggle="modal" data-target="#exampleModalCenter">Download Free</button> {% endcomment %}
-            {% comment %} </div> {% endcomment %}
-            <div class="box-cta-inner"><a class="button button-lg button-primary" href="https://apps.apple.com/us/app/wingwarp-momenta/id1450517652">Download Free</a></div>
+            <div class="box-cta-inner">
+                <button class="button button-lg button-primary download-button-2" data-toggle="modal" data-target="#exampleModalCenter">Download Free</button>
+            </div>
+            {% comment %} <div class="box-cta-inner"><a class="button button-lg button-primary" href="https://apps.apple.com/us/app/wingwarp-momenta/id1450517652">Download Free</a></div> {% endcomment %}
           </div>
         </div>
       </section>
@@ -248,13 +243,13 @@
             </div>
           </div>
           {% comment %} <div class="area51"> {% endcomment %}
-          {% comment %} <div class="button-wrap-lg"> {% endcomment %}
-              {% comment %} <button class="button button-md button-primary button-long download-button-3" data-toggle="modal" data-target="#exampleModalCenter">Download Free Now</button> {% endcomment %}
-          {% comment %} </div> {% endcomment %}
+          <div class="button-wrap-lg">
+              <button class="button button-md button-primary button-long download-button-3" data-toggle="modal" data-target="#exampleModalCenter">Download Free Now</button>
+          </div>
           {% comment %} </div> {% endcomment %}
             {% comment %} <div class="container"><p id="custom-button" onclick="modalActivate()">Download Free Now</a></div> {% endcomment %}
             {% comment %} <div class="button-wrap-lg"><a class="button button-md button-primary button-long custom-button" onclick="modalActivate()" href="">Download Free Now</a></div> {% endcomment %}
-          <div class="button-wrap-lg button-custom"><a class="button button-md button-primary button-long" href="https://apps.apple.com/us/app/wingwarp-momenta/id1450517652">Download Free Now</a></div>
+          {% comment %} <div class="button-wrap-lg button-custom"><a class="button button-md button-primary button-long" href="https://apps.apple.com/us/app/wingwarp-momenta/id1450517652">Download Free Now</a></div> {% endcomment %}
         </div>
       </section>
       
