--- a/memories/templates/memories_app/index_2020.08.13_b4 new video.html
+++ b/memories/templates/memories_app/index_2020.08.13_b4 new video.html
@@ -1,6 +1,6 @@
 
 <!--Informative box--><!DOCTYPE html>
-{% load static %}
+{% load staticfiles %}
 
 <html class="wide wow-animation" lang="en">
   <head>
@@ -19,7 +19,6 @@
     <meta charset="utf-8">
     <link rel="icon" href="{% static 'images/favicon.ico' %}" type="image/x-icon">
     <!-- Stylesheets-->
-    <!--  this is commented out because i combine everything into one minified file -->
     {% comment %} <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Roboto:100,300,300i,400,700,900"> {% endcomment %}
     {% comment %} <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}"> {% endcomment %}
     {% comment %} <link rel="stylesheet" href="{% static 'css/fonts.css' %}"> {% endcomment %}
