added url parameters to appsflyer urls

--- a/memories/templates/memories_app/index_bu_2020.08.24_b4addingurlpassthrough.html
+++ b/memories/templates/memories_app/index_bu_2020.08.24_b4addingurlpassthrough.html
@@ -97,7 +97,7 @@
                       {% comment %} <li button class="button button-sm button-primary self-center-sm download-button-nav button-jp-5" data-toggle="modal" data-target="#exampleModalCenter" data-caption-animate="fadeInUp" data-caption-delay="450">Download Free</button> {% endcomment %}
                       {% comment %} </li> {% endcomment %}
                       {% comment %} <li class="rd-nav-item"><a class="rd-nav-link" href="https://apps.apple.com/us/app/wingwarp-momenta/id1450517652">Free Download</a> {% endcomment %}
-                      <li class="button self-center-sm button-jp-5"><a class="button button-primary button-long download-button-nav" href="https://go.onelink.me/app/6e99b169?pid={{adsource}}&af_ad_type={{admedium}}&c={{adcampaign}}&af_ad={{adcontent}}">Download Free</a>
+                      <li class="button self-center-sm button-jp-5"><a class="button button-primary button-long download-button-nav" href="https://go.onelink.me/app/6e99b169">Download Free</a>
                       </li>
                     {% comment %} <li class="button-wrap-lg button-custom"><a class="button button-sm button-primary " href="https://apps.apple.com/us/app/wingwarp-momenta/id1450517652">Download Free</a></li> {% endcomment %}
                     </ul>
@@ -118,7 +118,7 @@
                   <div class="col-12">
                     {% comment %} <h1 data-caption-animate="fadeInUp" data-caption-delay="100"><span class="d-block font-weight-medium">Momenta Video Memories</span><span class="d-block font-weight-thin">Don't miss any more memories</span></h1><button class="button button-md button-primary self-center-md download-button-1" data-toggle="modal" data-target="#exampleModalCenter" data-caption-animate="fadeInUp" data-caption-delay="450">Download Free</button> {% endcomment %}
                     <h1 data-caption-animate="fadeInUp" data-caption-delay="100"><span class="d-block font-weight-medium">Momenta Video Memories</span><span class="d-block font-weight-thin">Don't miss any more memories</span></h1>
-                    <div class="button-wrap-lg button-custom"><a class="button button-md button-primary button-long download-button-1" href="https://go.onelink.me/app/6e99b169?pid={{adsource}}&af_ad_type={{admedium}}&c={{adcampaign}}&af_ad={{adcontent}}">Download Free</a></div>
+                    <div class="button-wrap-lg button-custom"><a class="button button-md button-primary button-long download-button-1" href="https://go.onelink.me/app/6e99b169">Download Free</a></div>
                     {% comment %} <div class="button-wrap-lg button-custom"><a class="button button-md button-primary button-long download-button-1" href="https://apps.apple.com/app/apple-store/id1450517652?pt=118492962&ct=momenta-memories-site&mt=8">Download Free</a></div> {% endcomment %}
                   </div>
                 </div>
@@ -212,7 +212,7 @@
             {% comment %} <div class="box-cta-inner"> {% endcomment %}
                 {% comment %} <button class="button button-lg button-primary download-button-2" data-toggle="modal" data-target="#exampleModalCenter">Download Free</button> {% endcomment %}
             {% comment %} </div> {% endcomment %}
-            <div class="box-cta-inner"><a class="button button-lg button-primary download-button-2" href="https://go.onelink.me/app/6e99b169?pid={{adsource}}&af_ad_type={{admedium}}&c={{adcampaign}}&af_ad={{adcontent}}">Download Free</a></div>
+            <div class="box-cta-inner"><a class="button button-lg button-primary download-button-2" href="https://go.onelink.me/app/6e99b169">Download Free</a></div>
             {% comment %} <div class="box-cta-inner"><a class="button button-lg button-primary download-button-2" href="https://apps.apple.com/app/apple-store/id1450517652?pt=118492962&ct=momenta-memories-site&mt=8">Download Free</a></div> {% endcomment %}
           </div>
         </div>
@@ -257,7 +257,7 @@
           {% comment %} </div> {% endcomment %}
             {% comment %} <div class="container"><p id="custom-button" onclick="modalActivate()">Download Free Now</a></div> {% endcomment %}
             {% comment %} <div class="button-wrap-lg"><a class="button button-md button-primary button-long custom-button" onclick="modalActivate()" href="">Download Free Now</a></div> {% endcomment %}
-          <div class="button-wrap-lg button-custom"><a class="button button-md button-primary button-long download-button-3" href="https://go.onelink.me/app/6e99b169?pid={{adsource}}&af_ad_type={{admedium}}&c={{adcampaign}}&af_ad={{adcontent}}">Download Free Now</a></div>
+          <div class="button-wrap-lg button-custom"><a class="button button-md button-primary button-long download-button-3" href="https://go.onelink.me/app/6e99b169">Download Free Now</a></div>
           {% comment %} <div class="button-wrap-lg button-custom"><a class="button button-md button-primary button-long download-button-3" href="https://apps.apple.com/app/apple-store/id1450517652?pt=118492962&ct=momenta-memories-site&mt=8">Download Free Now</a></div> {% endcomment %}
         </div>
       </section>
